--- a/src/main/resources/templates/userPage/fragments/trendingCourse.html
+++ b/src/main/resources/templates/userPage/fragments/trendingCourse.html
@@ -26,7 +26,7 @@
                 <div class="card shadow-hover overflow-hidden bg-transparent">
                     <div class="position-relative">
                         <!-- Image -->
-                        <img class="card-img-top" src="assets/images/courses/4by3/16.jpg" alt="Card image">
+                        <img class="card-img-top" th:src="@{${course.courseImg}!=null ? ${course.courseImg} : 'assets/images/courses/4by3/16.jpg'}"  style="height: 265px; object-fit: contain;" alt="Card image">
                         <!-- Overlay -->
                         <div class="bg-overlay bg-dark opacity-4"></div>
                         <div class="card-img-overlay d-flex align-items-start flex-column">
@@ -35,13 +35,13 @@
                                 <div class="d-flex align-items-center bg-white p-2 rounded-2">
                                     <!-- Avatar -->
                                     <div class="avatar avatar-sm me-2">
-                                        <img class="avatar-img rounded-1" th:src="@{/assets/images/avatar/10.jpg}"
+                                        <img class="avatar-img rounded-1" th:src="@{${course.instructor.profilePicture}!=null ? ${course.instructor.profilePicture} : '/assets/images/avatar/01.jpg'}"
                                             alt="avatar">
                                     </div>
                                     <!-- Avatar info -->
                                     <div>
                                         <h6 class="mb-0"><a href="#" class="text-dark"
-                                                th:text="${course.instructor.username}">Larry Lawson</a></h6>
+                                                th:text="${course.instructor.fullName}">Larry Lawson</a></h6>
                                         <span class="small"
                                             th:text="${course.instructor.personalSkill}">Instructor</span>
                                     </div>
