--- a/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
@@ -26,10 +26,10 @@
                              <span th:case="'rejected'" class="badge bg-danger">
                                  <i class="fas fa-times"></i> Rejected
                              </span>
-                             <span th:case="'resubmit'" class="badge bg-warning text-dark">
-                                 <i class="fas fa-exclamation-triangle"></i> ReSubmit
-                             </span>
-                         </span>
+                             <span th:case="'publish'" class="badge bg-secondary">
+                                <i class="fas fa-clock"></i> Publish
+                            </span>
+                        </span>
         </td>
         <td>
             <div class="d-flex justify-content-center gap-2 w-100">
